force-app/main/default/objects/Projection__c/Projection__c.object-meta.xml
<CustomObject>
    <description>Projections are used to log and track a high-level breakdown of the amounts expected from a particular opportunity or gift in a particular fiscal year.</description>
    <label>Projection</label>
    <nameField>
        <displayFormat>PROJ-{000000}</displayFormat>
        <label>Projection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>