force-app/main/default/objects/Projection__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <description>The name of the linked opportunity&apos;s account</description>
    <formula>IF( NOT(ISBLANK(Opportunity__c)) &amp;&amp; NOT(ISBLANK(Opportunity__r.AccountId)),  Opportunity__r.Account.Name, null )</formula>
    <inlineHelpText>The name of the linked opportunity&apos;s account</inlineHelpText>
    <label>Account name</label>
    <type>Text</type>
</CustomField>