force-app/main/default/objects/Projection__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount allocated for this projection - if blank, then total amount is calculated by adding grantmaking and non-grantmaking amounts.</description>
    <inlineHelpText>The amount allocated for this projection - if blank, then total amount is calculated by adding grantmaking and non-grantmaking amounts.</inlineHelpText>
    <label>Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>