force-app/main/default/objects/Projection__c/fields/Amount_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Amount_Advocacy__c</fullName>
    <description>The portion of the total that is allocated to Advocacy for the given fiscal year</description>
    <inlineHelpText>The portion of the total that is allocated to Advocacy for the given fiscal year</inlineHelpText>
    <label>Amount: Advocacy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>