force-app/main/default/objects/Projection__c/fields/Amount_Fiscal_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Amount_Fiscal_Sponsorship__c</fullName>
    <description>The portion of the opportunity/gift that is allocated for Fiscal Sponsorship for the given fiscal year</description>
    <inlineHelpText>The portion of the opportunity/gift that is allocated for Fiscal Sponsorship for the given fiscal year</inlineHelpText>
    <label>Amount: Fiscal Sponsorship</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>