force-app/main/default/objects/Projection__c/fields/Amount_General_support__c.field-meta.xml
<CustomField>
    <fullName>Amount_General_support__c</fullName>
    <description>The portion of the opportunity/gift that is allocated for General support for the given fiscal year</description>
    <inlineHelpText>The portion of the opportunity/gift that is allocated for General support for the given fiscal year</inlineHelpText>
    <label>Amount: General support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>