force-app/main/default/objects/Projection__c/fields/Amount_Grantmaking_support__c.field-meta.xml
<CustomField>
    <fullName>Amount_Grantmaking_support__c</fullName>
    <description>The portion of the total that is allocated to grantmaking support for the given fiscal year</description>
    <inlineHelpText>The portion of the total that is allocated to grantmaking support for the given fiscal year</inlineHelpText>
    <label>Amount: Grantmaking support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>