force-app/main/default/objects/Projection__c/fields/Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Amount_Total__c</fullName>
    <description>The portion of the opportunity/gift allocated to the given fiscal year totaled across funding categories</description>
    <formula>Amount_Advocacy__c + Amount_Fiscal_Sponsorship__c + Amount_General_support__c + Amount_Grantmaking__c + Amount_Grantmaking_support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The portion of the opportunity/gift allocated to the given fiscal year totaled across funding categories</inlineHelpText>
    <label>Amount: Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>