force-app/main/default/objects/Projection__c/fields/Carryover__c.field-meta.xml
<CustomField>
    <fullName>Carryover__c</fullName>
    <description>The amount from a projection for the previous fiscal year that is carried over to this projection</description>
    <inlineHelpText>The amount from a projection for the previous fiscal year that is carried over to this projection</inlineHelpText>
    <label>Carryover</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>