force-app/main/default/objects/Projection__c/fields/ChartofAccounts__c.field-meta.xml
<CustomField>
    <fullName>ChartofAccounts__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This projection&apos;s chart of accounts record</description>
    <inlineHelpText>This projection&apos;s chart of accounts record</inlineHelpText>
    <label>Chart of Accounts</label>
    <referenceTo>ChartofAccounts__c</referenceTo>
    <relationshipLabel>Projections</relationshipLabel>
    <relationshipName>Projections</relationshipName>
    <type>Lookup</type>
</CustomField>