force-app/main/default/objects/Projection__c/fields/Date_closed__c.field-meta.xml
<CustomField>
    <fullName>Date_closed__c</fullName>
    <description>The date on which this projection was closed</description>
    <inlineHelpText>The date on which this projection was closed</inlineHelpText>
    <label>Date closed</label>
    <type>Date</type>
</CustomField>