force-app/main/default/objects/Projection__c/fields/Exchange_rate_to_target_currency__c.field-meta.xml
<CustomField>
    <fullName>Exchange_rate_to_target_currency__c</fullName>
    <description>The exchange rate used to convert to the target (linked fund&apos;s) currency</description>
    <inlineHelpText>The exchange rate used to convert to the target (linked fund&apos;s) currency</inlineHelpText>
    <label>Exchange rate to target currency</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>