force-app/main/default/objects/Projection__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>Unique, case-insensitive text field</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique, case-insensitive text field</inlineHelpText>
    <label>ExternalID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>