force-app/main/default/objects/Projection__c/fields/Forecast_amount_expected_from_opp__c.field-meta.xml
<CustomField>
    <fullName>Forecast_amount_expected_from_opp__c</fullName>
    <description>The expected amount per year (adjusted by the opportunity&apos;s probability field) from the linked opportunity record if this projection hasn&apos;t yet been assigned an amount</description>
    <formula>IF(
 AND(
  NOT(ISBLANK( Opportunity__c )),
  TEXT(Opportunity__r.StageName) != &quot;Closed Lost&quot;,
  NOT( Total_amount__c &gt; 0 )
 ),
 Opportunity__r.Expected_revenue_per_year__c , null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The expected amount per year (adjusted by the opportunity&apos;s probability field) from the linked opportunity record if this projection hasn&apos;t yet been assigned an amount</inlineHelpText>
    <label>Forecast amount expected (from opp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>