force-app/main/default/objects/Projection__c/fields/Forecast_amount_from_opp_total__c.field-meta.xml
<CustomField>
    <fullName>Forecast_amount_from_opp_total__c</fullName>
    <description>The amount from the linked opportunity record if this projection hasn&apos;t yet been assigned an amount</description>
    <formula>IF(
 AND(
  NOT(ISBLANK( Opportunity__c )),
  TEXT(Opportunity__r.StageName) != &quot;Closed Lost&quot;,
  NOT( Total_amount__c &gt; 0 )
 ),
 Opportunity__r.Amount , null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount from the linked opportunity record if this projection hasn&apos;t yet been assigned an amount</inlineHelpText>
    <label>Forecast amount (from opp total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>