force-app/main/default/objects/Projection__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The fund that specifies and tracks how the grantmaking part of this projection is spent</description>
    <inlineHelpText>The fund that specifies and tracks how the grantmaking part of this projection is spent</inlineHelpText>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Projections</relationshipLabel>
    <relationshipName>Projections</relationshipName>
    <type>Lookup</type>
</CustomField>