force-app/main/default/objects/Projection__c/fields/Grantmaking_amount__c.field-meta.xml
<CustomField>
    <fullName>Grantmaking_amount__c</fullName>
    <description>Specific amount allocated for grantmaking - if blank, then grantmaking amount is calculated using the grantmaking percent field</description>
    <inlineHelpText>Specific amount allocated for grantmaking - if blank, then grantmaking amount is calculated using the grantmaking percent field</inlineHelpText>
    <label>Grantmaking amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>