force-app/main/default/objects/Projection__c/fields/Grantmaking_fraction__c.field-meta.xml
<CustomField>
    <fullName>Grantmaking_fraction__c</fullName>
    <defaultValue>0.8</defaultValue>
    <description>The fraction of the amount that is to be allocated for grantmaking activities - this is superceded by the grantmaking amount field if non-blank.</description>
    <inlineHelpText>The fraction of the amount that is to be allocated for grantmaking activities - this is superceded by the grantmaking amount field if non-blank.</inlineHelpText>
    <label>Grantmaking fraction</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>