force-app/main/default/objects/Projection__c/fields/Has_FY_clash__c.field-meta.xml
<CustomField>
    <fullName>Has_FY_clash__c</fullName>
    <description>Checked if the FY of the projection clashes with that of the linked fund</description>
    <formula>AND(
 NOT(ISBLANK( Fund__c )),
 NOT(ISBLANK( TEXT(Fiscal_year__c) )),
 NOT(ISBLANK( TEXT(Fund__r.Fiscal_year__c) )),
 TEXT(Fiscal_year__c) &lt;&gt; TEXT(Fund__r.Fiscal_year__c)
)</formula>
    <inlineHelpText>Checked if the FY of the projection clashes with that of the linked fund</inlineHelpText>
    <label>Has FY clash</label>
    <type>Checkbox</type>
</CustomField>