force-app/main/default/objects/Projection__c/fields/Non_grantmaking_amount__c.field-meta.xml
<CustomField>
    <fullName>Non_grantmaking_amount__c</fullName>
    <description>Specific amount allocated for non-grantmaking purposes - if blank, then non-grantmaking amount is calculated using the grantmaking percent field</description>
    <inlineHelpText>Specific amount allocated for non-grantmaking purposes - if blank, then non-grantmaking amount is calculated using the grantmaking percent field</inlineHelpText>
    <label>Non-grantmaking amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>