force-app/main/default/objects/Projection__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity to which this projection applies (for the given fiscal year)</description>
    <inlineHelpText>The opportunity to which this projection applies (for the given fiscal year)</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projections</relationshipLabel>
    <relationshipName>Projections</relationshipName>
    <type>Lookup</type>
</CustomField>