force-app/main/default/objects/Projection__c/fields/Opportunity_owner_name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_owner_name__c</fullName>
    <description>Name of the owner of this projection&apos;s linked opportunity</description>
    <formula>IF(NOT(ISBLANK(Opportunity__c)),
 Opportunity__r.Owner.FirstName &amp; 
 &quot; &quot; &amp;
 Opportunity__r.Owner.LastName,

&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the owner of this projection&apos;s linked opportunity</inlineHelpText>
    <label>Opportunity owner name</label>
    <type>Text</type>
</CustomField>