force-app/main/default/objects/Projection__c/fields/Opportunity_stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_stage__c</fullName>
    <description>The current stage of this projection&apos;s linked opportunity</description>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The current stage of this projection&apos;s linked opportunity</inlineHelpText>
    <label>Opportunity stage</label>
    <type>Text</type>
</CustomField>