force-app/main/default/objects/Projection__c/fields/Remaining_to_charge__c.field-meta.xml
<CustomField>
    <fullName>Remaining_to_charge__c</fullName>
    <description>The amount of the Total Grantmaking amount left to charge</description>
    <formula>Total_grantmaking__c - Total_charged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of the Total Grantmaking amount left to charge</inlineHelpText>
    <label>Remaining to charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>