force-app/main/default/objects/Projection__c/fields/Reporting_complete__c.field-meta.xml
<CustomField>
    <fullName>Reporting_complete__c</fullName>
    <description>Checked if the linked opportunity&apos;s Reporting Complete checkbox is checked</description>
    <formula>Opportunity__r.Reporting_complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the linked opportunity&apos;s Reporting Complete checkbox is checked</inlineHelpText>
    <label>Reporting complete</label>
    <type>Checkbox</type>
</CustomField>