force-app/main/default/objects/Projection__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of this projection</description>
    <formula>IF(NOT(ISBLANK(Date_closed__c)), &quot;5 - closed&quot;,
IF(Total_charged__c &gt; 0 &amp;&amp; Remaining_to_charge__c = 0, &quot;4 - Charging completed&quot;,
IF(Total_charged__c &gt; 0, &quot;3 - Charging begun&quot;,
&quot;1 - Pending&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of this projection</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>