force-app/main/default/objects/Projection__c/fields/Target_currency__c.field-meta.xml
<CustomField>
    <fullName>Target_currency__c</fullName>
    <description>The outgoing currency, matching the currency of the linked fund</description>
    <inlineHelpText>The outgoing currency, matching the currency of the linked fund</inlineHelpText>
    <label>Target currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>