force-app/main/default/objects/Projection__c/fields/Total_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_amount__c</fullName>
    <description>This formula field equals total gathered if this is a gatherer projection, else Amount if non-blank, else grantmaking amount plus non-grantmaking amount.</description>
    <formula>IF(Total_received_pooled__c &gt; 0 &amp;&amp; ISBLANK(Carryover__c) &amp;&amp; ISBLANK(Grantmaking_amount__c) &amp;&amp; ISBLANK(Amount__c),
  Total_received_pooled__c,
IF(Amount__c &gt; 0.0, Amount__c,
 Grantmaking_amount__c + Non_grantmaking_amount__c
))</formula>
    <inlineHelpText>This formula field equals total gathered if this is a gatherer projection, else Amount if non-blank, else grantmaking amount plus non-grantmaking amount.</inlineHelpText>
    <label>Total amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>