force-app/main/default/objects/Projection__c/fields/Total_charged__c.field-meta.xml
<CustomField>
    <fullName>Total_charged__c</fullName>
    <description>The total amount charged from linked fund</description>
    <formula>Fund__r.Total_charged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount charged from linked fund</inlineHelpText>
    <label>Total charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>