force-app/main/default/objects/Projection__c/fields/Total_funds__c.field-meta.xml
<CustomField>
    <fullName>Total_funds__c</fullName>
    <description>The total amount restricted (including overhead) from linked fund</description>
    <formula>Fund__r.Amount_funded_with_overhead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total funds (including overhead) from linked fund</inlineHelpText>
    <label>Total funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>