force-app/main/default/objects/Projection__c/fields/Total_funds_for_GM__c.field-meta.xml
<CustomField>
    <fullName>Total_funds_for_GM__c</fullName>
    <description>The total funds for grantmaking from linked fund</description>
    <formula>Fund__r.Amount_funded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total funds for grantmaking from linked fund</inlineHelpText>
    <label>Total funds for GM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>