force-app/main/default/objects/Projection__c/fields/Total_grantmaking_converted__c.field-meta.xml
<CustomField>
    <fullName>Total_grantmaking_converted__c</fullName>
    <description>The total grantmaking amount converted to the target currency, if any</description>
    <formula>IF(NOT(ISBLANK(TEXT(Target_currency__c))),
 ROUND(Total_grantmaking__c * Exchange_rate_to_target_currency__c, 2),
 Total_grantmaking__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total grantmaking amount converted to the target currency, if any</inlineHelpText>
    <label>Total grantmaking converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>