force-app/main/default/objects/Projection__c/fields/Total_received_pooled__c.field-meta.xml
<CustomField>
    <fullName>Total_received_pooled__c</fullName>
    <description>The total amount received for a &quot;gathering&quot; projection - auto-maintained as the sum of posted transactions in the given FY assigned to the given chart-of-accounts that don&apos;t link to an opportunity with its own projection in this FY.</description>
    <inlineHelpText>The total amount received for a &quot;gathering&quot; projection - auto-maintained as the sum of posted transactions in the given FY assigned to the given chart-of-accounts that don&apos;t link to an opportunity with its own projection in this FY.</inlineHelpText>
    <label>Total gathered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>