force-app/main/default/objects/Projection__c/validationRules/AmountLessThanAmountReleased.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountLessThanAmountReleased</fullName>
    <active>true</active>
    <description>The amount for grantmaking may not be less than the amount already released.</description>
    <errorConditionFormula>Total_grantmaking__c &lt; Amount_released__c</errorConditionFormula>
    <errorMessage>The amount for grantmaking may not be less than the amount already released.</errorMessage>
</ValidationRule>