force-app/main/default/objects/Projection__c/validationRules/FYClashWithFund.validationRule-meta.xml
<ValidationRule>
    <fullName>FYClashWithFund</fullName>
    <active>true</active>
    <description>The fiscal year (FY) of the projection must agree with that of the linked fund.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Fund__c )),
 NOT(ISBLANK( TEXT(Fiscal_year__c) )),
 NOT(ISBLANK( TEXT(Fund__r.Fiscal_year__c) )),
 TEXT(Fiscal_year__c) &lt;&gt; TEXT(Fund__r.Fiscal_year__c)
)</errorConditionFormula>
    <errorDisplayField>Fiscal_year__c</errorDisplayField>
    <errorMessage>The fiscal year (FY) of the projection must agree with that of the linked fund.</errorMessage>
</ValidationRule>