force-app/main/default/objects/Projection__c/validationRules/GMAndNonGMAmountsBlankOrNonBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>GMAndNonGMAmountsBlankOrNonBlank</fullName>
    <active>true</active>
    <description>The fields Grantmaking amount and Non-grantmaking amount, must both be blank or both be non-blank.</description>
    <errorConditionFormula>OR(
 AND(
  ISBLANK( Grantmaking_amount__c ),
  NOT(ISBLANK( Non_grantmaking_amount__c ))
 ),
 AND(
  NOT(ISBLANK( Grantmaking_amount__c )),
  ISBLANK( Non_grantmaking_amount__c )
 )
)</errorConditionFormula>
    <errorDisplayField>Grantmaking_amount__c</errorDisplayField>
    <errorMessage>The fields Grantmaking amount and Non-grantmaking amount, must both be blank or both be non-blank.</errorMessage>
</ValidationRule>