force-app/main/default/objects/Projection__c/validationRules/PartiallyReleasedNoRelinking.validationRule-meta.xml
<ValidationRule>
    <fullName>PartiallyReleasedNoRelinking</fullName>
    <active>true</active>
    <description>This projection is partially released and may not be relinked.</description>
    <errorConditionFormula>AND(
 Amount_released__c &gt; 0,
 OR(
  ISCHANGED(Opportunity__c),
  ISCHANGED(Fund__c)
 )
)</errorConditionFormula>
    <errorMessage>This projection is partially released and may not be relinked.</errorMessage>
</ValidationRule>