force-app/main/default/objects/Projection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_year__c</columns>
    <columns>Status__c</columns>
    <columns>ChartofAccounts__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Total_amount__c</columns>
    <columns>Total_grantmaking__c</columns>
    <columns>Total_non_grantmaking__c</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>